--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,24 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
-
-    <script type="importmap">
-      {
-        "imports": {
-          "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-          "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-          "react": "https://esm.sh/react@^19.2.4",
-          "react/": "https://esm.sh/react@^19.2.4/",
-          "clsx": "https://esm.sh/clsx@^2.1.1",
-          "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-          "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-          "@monaco-editor/react": "https://esm.sh/@monaco-editor/react@^4.7.0",
-          "tailwind-merge": "https://esm.sh/tailwind-merge@^3.4.0"
-        }
-      }
-    </script>
   </head>
-  <body>
+  <body
+    style="background-color: #09090b; color: #e4e4e7; margin: 0; padding: 0"
+  >
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
